[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxpress"
dynamic = ["version"]
description = "Publish multiple Sphinx documentation projects as one Jekyll site, PDF, or EPUB."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Holger Nahrstaedt" }]
dependencies = [
  "sphinx>=7",
  "typer>=0.12",
  "PyYAML>=6",
  "jinja2>=3.1",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML",
]

[project.scripts]
sphinxpress = "sphinxpress.cli:app"

[tool.setuptools]
packages = ["sphinxpress"]

[tool.setuptools.package-data]
sphinxpress = ["templates/*.j2"]

[tool.setuptools_scm]
version_file = "sphinxpress/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
