[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxpress"
dynamic = ["version"]
description = "Publish multiple Sphinx documentation projects as one Jekyll site, PDF, or EPUB."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Holger Nahrstaedt" }]
keywords = ["sphinx", "jekyll", "documentation", "github-pages", "epub", "pdf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "sphinx>=7",
  "typer>=0.12",
  "PyYAML>=6",
  "jinja2>=3.1",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML",
]
docs = [
  "myst-parser>=2",
  "sphinx-rtd-theme>=2",
]

[project.urls]
Homepage = "https://github.com/buchwandler/sphinxpress"
Repository = "https://github.com/buchwandler/sphinxpress"
Issues = "https://github.com/buchwandler/sphinxpress/issues"
Documentation = "https://buchwandler.de/tools/sphinxpress/"

[project.scripts]
sphinxpress = "sphinxpress.cli:app"

[tool.setuptools]
packages = ["sphinxpress", "sphinxpress.templates"]

[tool.setuptools.package-data]
sphinxpress = ["templates/*.j2"]

[tool.setuptools_scm]
version_file = "sphinxpress/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
